@@ -1,5 +1,10 @@
 2003-05-13  Daniel Steffen  <das@users.sourceforge.net>
 
+	* macosx/tkMacOSXInit.c (TkpInit): use new versioned bundle 
+	resource API to get tk runtime library for TK_VERSION. [Bug 736774]
+
+2003-05-13  Daniel Steffen  <das@users.sourceforge.net>
+
 	backport of Mac OS X specific changes on trunk since 8.4.2:
 	
 	* macosx/tkMacOSXClipboard.c (TkSelGetSelection): Convert
